<resources>
    <string name="app_name">Canciones</string>
    <string name="type_name">Escribe el nombre</string>
    <string name="type_artist">Escribe el artista</string>
    <string name="type_album">Escribe el albúm</string>
    <string name="insert">Agregar</string>
    <string name="update">Modificar</string>
    <string name="delete">Eliminar</string>
    <string name="view_list">Ver lista</string>
    <string name="type_delete_or_update">Escribe ID para eliminar o actualizar</string>
</resources>
