<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bere.dlira.song.SongActivity"
    android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_name"
        android:hint="@string/type_name"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_artist"
        android:hint="@string/type_artist"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_album"
        android:hint="@string/type_album"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_id"
        android:hint="@string/type_delete_or_update"
        android:inputType="numberDecimal"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="4">
        <Button
            android:id="@+id/btn_insert"
            android:text="@string/insert"/>
        <Button
            android:id="@+id/btn_update"
            android:text="@string/update"/>
        <Button
            android:id="@+id/btn_delete"
            android:text="@string/delete"/>
        <Button
            android:id="@+id/btn_list"
            android:text="@string/view_list"/>
    </GridLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/lsv_songs">
    </ListView>
</LinearLayout>
